@@ -13,6 +13,7 @@ v1.3 (in development)
 - Apply fix for :djangoticket:`12192`. If QuerySet slicing would result in ``LIMIT 0``, then it shouldn't reach
   the database because there will be no response.
 - Implemented DatabaseOperation ``cache_key_culling_sql``. :djangoticket:`18330`
+- Fixed ``cast_avg_to_float`` so that it only controls the cast for ``AVG`` and not mapping other aggregates.
 
 v1.2
 ----
